--- a/languages/sfs-plugin-ru_RU.po
+++ b/languages/sfs-plugin-ru_RU.po
@@ -1685,6 +1685,254 @@ msgstr "Удалить Transients"
 msgid "Currently there are %s found."
 msgstr "Сейчас найдено %s."
 
+# # -- ss_threat_scan.php ---------------------------------------------------------
+msgid ""
+"This is a very simple threat scan that looks for things out of place in the "
+"content directory as well as the database."
+msgstr ""
+"Это очень простое сканирование угроз, которое ищет в каталоге WP, а также в "
+"базе данных."
+
+msgid ""
+"The process searches PHP files for the occurrence of the eval() function, "
+"which, although a valuable part of PHP is also the door that hackers use in "
+"order to infect systems. The eval() function is avoided by many programmers "
+"unless there is a real need. It is often used by hackers to hide their "
+"malicious code or to inject future threats into infected systems. If you "
+"find a theme or a plugin that uses the eval() function it is safer to delete "
+"it and ask the author to provide a new version that does not use this "
+"function."
+msgstr ""
+"Процесс ищет в файлах PHP функцию <strong>eval()</strong>, которая, хотя и "
+"является ценной частью PHP, но чаще используется хакерами для заражения "
+"систем. Функция eval() избегается многими программистами, если в этом нет "
+"реальной необходимости. Он часто используется хакерами, чтобы скрыть свой "
+"вредоносный код или внедрить будущие угрозы в зараженные системы. Если вы "
+"найдете тему или плагин, который использует функцию eval(), безопаснее "
+"удалить его и попросить автора предоставить новую версию, которая не "
+"использует эту функцию."
+
+msgid ""
+"The scan can take a few seconds and on larger or slower systems can time-out."
+msgstr ""
+"Сканирование может проходить достаточно долго, в более крупных или более "
+"медленных системах время ожидания может превысить ограничения хостинга на "
+"<em>время выполнения скрипта</em>."
+
+msgid "Run Scan"
+msgstr "Запустить сканирование"
+
+msgid ""
+"When you scan your system you undoubtedly see the eval used in Javascript "
+"because it is used in the Javascript AJAX and JSON functionality. The "
+"appearance of eval in these cases does not mean that there is a possible "
+"threat. It just means that you should inspect the code to make sure that it "
+"is in a Javascript section and not native PHP."
+msgstr ""
+"Когда вы сканируете свою систему, вы, несомненно, видите eval, используемый "
+"в Javascript, потому что он используется в функциях Javascript AJAX и JSON. "
+"Появление eval в этих случаях не означает, что существует возможная угроза. "
+"Это просто означает, что вы должны проверить код, чтобы убедиться, что он "
+"находится в разделе Javascript, а не в PHP."
+
+msgid ""
+"The process continues its scan by checking the database tables for "
+"Javascript or HTML where it should not be found."
+msgstr ""
+"Процесс продолжает сканирование, проверяя таблицы базы данных на наличие "
+"Javascript или HTML, где b[ не должны быть."
+
+msgid ""
+"Normally, Javascript can be found in the post body, but if the script tag is "
+"found in a title or a text field where it does not belong it is probably "
+"because the script is hiding something, such as a hidden admin user, so that "
+"the normal administration pages do not show bad records. The scan looks for "
+"this and displays the table and record number where it believes there is "
+"something hinky."
+msgstr ""
+"Обычно Javascript можно найти в теле сообщения, но если script tag находится "
+"в заголовке или текстовом поле, к которому он не принадлежит, это может быть "
+"связано с тем, что сценарий скрывает что-то, например скрытого пользователя-"
+"администратора, так что нормальные страницы администрирования не показывают "
+"плохие записи. Сканирование ищет это и отображает таблицу и номер записи, "
+"где, по ее мнению, есть что-то странное."
+
+msgid ""
+"The scan continues looking in the database for certain HTML in places where "
+"it does not belong. Recent threats have been putting HTML into fields in the "
+"options table so that users will be sent to malicious sites. The presence of "
+"HTML in options values is suspect and should be checked."
+msgstr ""
+"Сканирование продолжает искать в базе данных HTML в тех местах, где он не "
+"должен быть. Недавние угрозы помещают HTML в поля таблицы параметров, чтобы "
+"пользователи перенаправлялись на вредоносные сайты. Наличие HTML в значениях "
+"параметров является подозрительным и должно быть проверено."
+
+msgid ""
+"The options table will have things placed there by plugins so it is "
+"difficult to tell if scripts, iframes, and other HTML tags are a threat. "
+"They will be reported, but they should be checked before deleting the "
+"entries."
+msgstr ""
+"В таблице параметров  сохраняются настройки плагинов, поэтому сложно "
+"определить, являются ли сценарии, iframes и другие теги HTML угрозой. О них "
+"будет сообщено, но они должны быть проверены перед удалением записей."
+
+msgid ""
+"This process is just a simple scan and does not try to fix any problems. It "
+"will show things that may not be threats, but should be checked. If anything "
+"shows up, you should try to repair the damage or hire someone to do it. I am "
+"not a security expert, but a programmer who discovered these types of things "
+"in a friend's blog. After many hours of checking I was able to fix the "
+"problem, but a professional could have done it faster and easier, although "
+"they would have charged for it."
+msgstr ""
+"Этот процесс является очень простым сканированием и не пытается исправить "
+"какие-либо проблемы. Это покажет вещи, которые могут быть не угрозами, но "
+"должны быть проверены. Если что-то обнаруживается, вы должны попытаться "
+"исправить или нанять кого-то, чтобы сделать это."
+
+msgid ""
+"You probably do not have a backup to your blog, so if this scan shows you "
+"are clean, your next step is to install one of the plugins that does regular "
+"backups of your system. Next, make sure you have the latest WordPress "
+"version."
+msgstr ""
+"Вероятно, у вас нет резервной копии блога, поэтому, если это сканирование "
+"показывает, что вы чисты, следующим шагом будет установка одного из "
+"плагинов, который регулярно создает резервные копии вашей системы. Затем "
+"убедитесь, что у вас установлена последняя версия WordPress."
+
+msgid ""
+"If you think you have problems, the first thing to do is change your user ID "
+"and password. Next make a backup of the infected system. Any repairs to "
+"WordPress might delete important data so you might lose posts, and the "
+"backup will help you recover missing posts."
+msgstr ""
+"Если вы думаете, что у вас есть проблемы, первое, что нужно обязательно "
+"сделать - изменить свой логин пользователя и пароль. Далее сделайте "
+"резервную копию системы. Любой ремонт WordPress может удалить важные данные "
+"и вы можете потерять сообщения, а резервная копия поможет вам восстановить "
+"пропущенные сообщения."
+
+msgid ""
+"The next step is to install the latest version of WordPress. The new "
+"versions usually have fixes for older threats."
+msgstr ""
+"Следующим шагом является установка последней версии WordPress. В новых "
+"версиях обычно есть исправления для старых угроз и ошибок."
+
+msgid ""
+"You may want to export your WordPress posts, make a new clean installation "
+"of WordPress, and then import the old posts."
+msgstr ""
+"Вы можете экспортировать свои сообщения WordPress, сделать новую чистую "
+"установку WordPress, а затем импортировать старые сообщения."
+
+msgid "If this doesn't work it is time to get a pro involved."
+msgstr "Если это не работает, пришло время привлечь профессионала."
+
+msgid ""
+"A clean scan does not mean you are safe. Please do backups and keep your "
+"installation up-to-date!"
+msgstr ""
+"Cканирование без угроз не означает, что вы в безопасности. Пожалуйста, "
+"делайте резервные копии и обновляйте свою установку!"
+
+msgid "Testing Posts"
+msgstr "Тестируем посты (сообщения)"
+
+msgid "Nothing found in posts."
+msgstr "Ничего не найдено в постах(сообщениях)"
+
+msgid "Testing Comments"
+msgstr "Тестируем комменты"
+
+msgid "Nothing found in comments."
+msgstr "Ничего не найдено в комментах"
+
+msgid "Testing Links"
+msgstr "Тестируем ссылки"
+
+msgid "Testing Users"
+msgstr "Тестируем пользователей"
+
+msgid "Nothing found in links."
+msgstr "В ссылках ничего не найдено"
+
+msgid "Nothing found in users."
+msgstr "В пользователях ничего не найдено"
+
+msgid "found possible problems in Users (%s) ID:%s"
+msgstr "Возможно найдены  проблемы в пользователях (%s) ID:%s"
+
+msgid "found possible problems in comment (%s) ID:%s"
+msgstr "Возможно найдены  проблемы в комментах (%s) ID:%s"
+
+msgid "found possible problems in post (%s) ID:%s"
+msgstr "Возможно найдены  проблемы в сообщениях (%s) ID:%s"
+
+msgid "found possible problems in links (%s) ID:%s"
+msgstr "Возможно найдены  проблемы в ссылках (%s) ID:%s"
+
+msgid "Testing Options Table for HTML"
+msgstr "Тестируем таблицу настроек на содержание HTML кода"
+
+msgid "Nothing found in options."
+msgstr "Ничего не найдено в настройках"
+
+msgid "Found possible problems in Option %s (%s) option_id: %s value: %s"
+msgstr "Найдены возможные проблемы в настройках %s (%s) id: %s строка: %s"
+
+msgid "Scanning Themes and Plugins for eval"
+msgstr "Сканируем темы и плагины на функию eval()"
+
+msgid "Possible Problems Found!"
+msgstr "Возможно найдены проблемы!"
+
+msgid "No Problems Found"
+msgstr "Проблем не найдено."
+
+msgid ""
+"These are warnings only. Some content and plugins might not be malicious, "
+"but still contain one or more of these indicators. Please investigate all "
+"indications of problems. The plugin may err on the side of caution."
+msgstr ""
+"Это только предупреждения. Некоторый контент и плагины могут не быть "
+"вредоносными, но все же содержат один или несколько из этих признаков. "
+"Пожалуйста, изучите все признаки проблем. Плагин может ошибаться."
+
+msgid ""
+"Although there are legitimate reasons for using the eval function, and "
+"Javascript uses it frequently, finding eval in PHP code is in the very least "
+"bad practice, and the worst is used to hide malicious code. If eval() comes "
+"up in a scan, try to get rid of it."
+msgstr ""
+"Хотя существуют достаточные причины для использования функции eval() и "
+"Javascript использует ее часто, поиск eval() в PHP-коде не является плохой "
+"идеей, т.к. это может скрывать вредоносный код. Если при сканировании "
+"появляется eval(), попытайтесь избавиться от него."
+
+msgid ""
+"Your code could contain 'eval', or 'document.write(unescape(' or 'try{window."
+"onload' or setAttribute('src'. These are markers for problems such as SQL "
+"injection or cross-browser Javascript. &lt;script&gt; tags should occur in "
+"your posts, if you added them, but should not be found anywhere else, except "
+"options. Options often have scripts for displaying Facebook, Twitter, etc. "
+"Be careful, though, if one appears in an option. Most of the time it is OK, "
+"but make sure."
+msgstr ""
+"Ваш код может содержать 'eval' или 'document.write (unescape(' или 'try "
+"{window.onload' или setAttribute('src'). Это маркеры для таких проблем, как "
+"SQL-инъекция или кросс-браузерный Javascript.; &lt;script&gt; теги должны "
+"присутствовать в ваших сообщениях, если вы их добавили, но их не следует "
+"искать где-либо еще, кроме опций. У опций часто есть скрипты для отображения "
+"Facebook, Twitter и т. д. Будьте осторожны, если один из них присутствует в "
+"опциях."
+
+msgid "Files"
+msgstr "Файлы"
+
 # ------------------ only into [729]jetsam fork StopSpamReg. -------------------------
 msgid "Mixed"
 msgstr "Разное"
